--- a/supergraph-config.yaml
+++ b/supergraph-config.yaml
@@ -4,3 +4,6 @@ subgraphs:
     routing_url: http://localhost # this value is ignored
     schema:
       file: listings.graphql
+  reviews:
+    schema:
+      subgraph_url: https://rt-airlock-subgraphs-reviews.herokuapp.com/
