--- a/supergraph-config.yaml
+++ b/supergraph-config.yaml
@@ -1,4 +1,4 @@
-federation_version: =2.9.0-connectors.12
+federation_version: =2.10.0-alpha.0
 subgraphs:
   listings:
     routing_url: http://localhost # this value is ignored
